fix(ui): update alignment for sticky column in project table
Change text alignment to center for the `.gsl-projet-table__sticky-right-2` column in the CSS styling.

--- a/gsl_core/static/css/gsl.css
+++ b/gsl_core/static/css/gsl.css
@@ -305,8 +305,7 @@ ul.no-list-style li {
 }
 
 .gsl-projet-table .fr-table__content td.gsl-projet-table__sticky-right-2 {
-    padding-right: 1.5em;
-    text-align: right;
+    text-align: center;
 }
 
 .gsl-projet-table__sticky-right-1:has([aria-expanded="true"]) {
